cmake_minimum_required (VERSION 3.8)
project(libtomcrypt)

# Suppress extra stuff from generated solution
set(CMAKE_SUPPRESS_REGENERATION true)

if ("${CMAKE_C_COMPILER_ID}" STREQUAL "MSVC")
 add_compile_definitions(
 _CRT_SECURE_NO_WARNINGS
 _CRT_NONSTDC_NO_DEPRECATE
 )
endif()

add_compile_definitions(
 LTM_DESC
 LTC_SOURCE
 LTC_NO_TEST
 LTC_NO_PROTOTYPES
)

include_directories(
 "${CXBXR_ROOT_DIR}/import/libtommath"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/headers"
)

file (GLOB HEADERS
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/headers/tomcrypt.h"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/headers/tomcrypt_argchk.h"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/headers/tomcrypt_cfg.h"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/headers/tomcrypt_cipher.h"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/headers/tomcrypt_custom.h"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/headers/tomcrypt_hash.h"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/headers/tomcrypt_mac.h"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/headers/tomcrypt_macros.h"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/headers/tomcrypt_math.h"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/headers/tomcrypt_misc.h"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/headers/tomcrypt_pk.h"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/headers/tomcrypt_pkcs.h"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/headers/tomcrypt_prng.h"
)

file (GLOB SOURCES
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/ciphers/aes/aes.c"
#EXCLUDE "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/ciphers/aes/aes_tab.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/ciphers/anubis.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/ciphers/blowfish.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/ciphers/camellia.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/ciphers/cast5.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/ciphers/des.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/ciphers/kasumi.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/ciphers/khazad.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/ciphers/kseed.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/ciphers/multi2.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/ciphers/noekeon.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/ciphers/rc2.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/ciphers/rc5.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/ciphers/rc6.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/ciphers/safer/safer.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/ciphers/safer/saferp.c"
#EXCLUDE "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/ciphers/safer/safer_tab.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/ciphers/skipjack.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/ciphers/twofish/twofish.c"
#EXCLUDE "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/ciphers/twofish/twofish_tab.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/ciphers/xtea.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ccm/ccm_add_aad.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ccm/ccm_add_nonce.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ccm/ccm_done.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ccm/ccm_init.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ccm/ccm_memory.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ccm/ccm_process.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ccm/ccm_reset.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ccm/ccm_test.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/chachapoly/chacha20poly1305_add_aad.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/chachapoly/chacha20poly1305_decrypt.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/chachapoly/chacha20poly1305_done.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/chachapoly/chacha20poly1305_encrypt.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/chachapoly/chacha20poly1305_init.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/chachapoly/chacha20poly1305_memory.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/chachapoly/chacha20poly1305_setiv.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/chachapoly/chacha20poly1305_setiv_rfc7905.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/chachapoly/chacha20poly1305_test.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/eax/eax_addheader.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/eax/eax_decrypt.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/eax/eax_decrypt_verify_memory.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/eax/eax_done.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/eax/eax_encrypt.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/eax/eax_encrypt_authenticate_memory.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/eax/eax_init.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/eax/eax_test.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/gcm/gcm_add_aad.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/gcm/gcm_add_iv.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/gcm/gcm_done.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/gcm/gcm_gf_mult.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/gcm/gcm_init.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/gcm/gcm_memory.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/gcm/gcm_mult_h.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/gcm/gcm_process.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/gcm/gcm_reset.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/gcm/gcm_test.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ocb/ocb_decrypt.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ocb/ocb_decrypt_verify_memory.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ocb/ocb_done_decrypt.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ocb/ocb_done_encrypt.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ocb/ocb_encrypt.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ocb/ocb_encrypt_authenticate_memory.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ocb/ocb_init.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ocb/ocb_ntz.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ocb/ocb_shift_xor.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ocb/ocb_test.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ocb/s_ocb_done.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ocb3/ocb3_add_aad.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ocb3/ocb3_decrypt.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ocb3/ocb3_decrypt_last.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ocb3/ocb3_decrypt_verify_memory.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ocb3/ocb3_done.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ocb3/ocb3_encrypt.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ocb3/ocb3_encrypt_authenticate_memory.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ocb3/ocb3_encrypt_last.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ocb3/ocb3_init.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ocb3/ocb3_int_ntz.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ocb3/ocb3_int_xor_blocks.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/encauth/ocb3/ocb3_test.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/hashes/blake2b.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/hashes/blake2s.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/hashes/chc/chc.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/hashes/helper/hash_file.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/hashes/helper/hash_filehandle.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/hashes/helper/hash_memory.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/hashes/helper/hash_memory_multi.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/hashes/md2.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/hashes/md4.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/hashes/md5.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/hashes/rmd128.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/hashes/rmd160.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/hashes/rmd256.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/hashes/rmd320.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/hashes/sha1.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/hashes/sha2/sha224.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/hashes/sha2/sha256.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/hashes/sha2/sha384.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/hashes/sha2/sha512.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/hashes/sha2/sha512_224.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/hashes/sha2/sha512_256.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/hashes/sha3.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/hashes/sha3_test.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/hashes/tiger.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/hashes/whirl/whirl.c"
#EXCLUDE "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/hashes/whirl/whirltab.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/blake2/blake2bmac.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/blake2/blake2bmac_file.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/blake2/blake2bmac_memory.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/blake2/blake2bmac_memory_multi.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/blake2/blake2bmac_test.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/blake2/blake2smac.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/blake2/blake2smac_file.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/blake2/blake2smac_memory.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/blake2/blake2smac_memory_multi.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/blake2/blake2smac_test.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/f9/f9_done.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/f9/f9_file.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/f9/f9_init.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/f9/f9_memory.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/f9/f9_memory_multi.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/f9/f9_process.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/f9/f9_test.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/hmac/hmac_done.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/hmac/hmac_file.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/hmac/hmac_init.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/hmac/hmac_memory.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/hmac/hmac_memory_multi.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/hmac/hmac_process.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/hmac/hmac_test.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/omac/omac_done.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/omac/omac_file.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/omac/omac_init.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/omac/omac_memory.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/omac/omac_memory_multi.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/omac/omac_process.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/omac/omac_test.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/pelican/pelican.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/pelican/pelican_memory.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/pelican/pelican_test.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/pmac/pmac_done.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/pmac/pmac_file.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/pmac/pmac_init.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/pmac/pmac_memory.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/pmac/pmac_memory_multi.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/pmac/pmac_ntz.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/pmac/pmac_process.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/pmac/pmac_shift_xor.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/pmac/pmac_test.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/poly1305/poly1305.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/poly1305/poly1305_file.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/poly1305/poly1305_memory.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/poly1305/poly1305_memory_multi.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/poly1305/poly1305_test.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/xcbc/xcbc_done.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/xcbc/xcbc_file.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/xcbc/xcbc_init.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/xcbc/xcbc_memory.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/xcbc/xcbc_memory_multi.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/xcbc/xcbc_process.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/mac/xcbc/xcbc_test.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/math/fp/ltc_ecc_fp_mulmod.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/math/gmp_desc.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/math/ltm_desc.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/math/multi.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/math/radix_to_bin.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/math/rand_bn.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/math/rand_prime.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/math/tfm_desc.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/adler32.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/base64/base64_decode.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/base64/base64_encode.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/burn_stack.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/compare_testvector.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crc32.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt_argchk.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt_cipher_descriptor.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt_cipher_is_valid.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt_constants.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt_find_cipher.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt_find_cipher_any.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt_find_cipher_id.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt_find_hash.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt_find_hash_any.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt_find_hash_id.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt_find_hash_oid.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt_find_prng.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt_fsa.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt_hash_descriptor.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt_hash_is_valid.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt_inits.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt_ltc_mp_descriptor.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt_prng_descriptor.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt_prng_is_valid.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt_prng_rng_descriptor.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt_register_all_ciphers.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt_register_all_hashes.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt_register_all_prngs.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt_register_cipher.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt_register_hash.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt_register_prng.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt_sizes.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt_unregister_cipher.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt_unregister_hash.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/crypt/crypt_unregister_prng.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/error_to_string.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/hkdf/hkdf.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/hkdf/hkdf_test.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/mem_neq.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/pkcs5/pkcs_5_1.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/pkcs5/pkcs_5_2.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/pkcs5/pkcs_5_test.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/pk_get_oid.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/misc/zeromem.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/cbc/cbc_decrypt.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/cbc/cbc_done.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/cbc/cbc_encrypt.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/cbc/cbc_getiv.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/cbc/cbc_setiv.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/cbc/cbc_start.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/cfb/cfb_decrypt.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/cfb/cfb_done.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/cfb/cfb_encrypt.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/cfb/cfb_getiv.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/cfb/cfb_setiv.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/cfb/cfb_start.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/ctr/ctr_decrypt.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/ctr/ctr_done.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/ctr/ctr_encrypt.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/ctr/ctr_getiv.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/ctr/ctr_setiv.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/ctr/ctr_start.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/ctr/ctr_test.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/ecb/ecb_decrypt.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/ecb/ecb_done.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/ecb/ecb_encrypt.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/ecb/ecb_start.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/f8/f8_decrypt.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/f8/f8_done.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/f8/f8_encrypt.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/f8/f8_getiv.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/f8/f8_setiv.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/f8/f8_start.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/f8/f8_test_mode.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/lrw/lrw_decrypt.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/lrw/lrw_done.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/lrw/lrw_encrypt.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/lrw/lrw_getiv.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/lrw/lrw_process.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/lrw/lrw_setiv.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/lrw/lrw_start.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/lrw/lrw_test.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/ofb/ofb_decrypt.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/ofb/ofb_done.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/ofb/ofb_encrypt.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/ofb/ofb_getiv.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/ofb/ofb_setiv.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/ofb/ofb_start.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/xts/xts_decrypt.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/xts/xts_done.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/xts/xts_encrypt.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/xts/xts_init.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/xts/xts_mult_x.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/modes/xts/xts_test.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/bit/der_decode_bit_string.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/bit/der_decode_raw_bit_string.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/bit/der_encode_bit_string.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/bit/der_encode_raw_bit_string.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/bit/der_length_bit_string.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/boolean/der_decode_boolean.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/boolean/der_encode_boolean.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/boolean/der_length_boolean.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/choice/der_decode_choice.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/generalizedtime/der_decode_generalizedtime.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/generalizedtime/der_encode_generalizedtime.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/generalizedtime/der_length_generalizedtime.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/ia5/der_decode_ia5_string.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/ia5/der_encode_ia5_string.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/ia5/der_length_ia5_string.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/integer/der_decode_integer.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/integer/der_encode_integer.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/integer/der_length_integer.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/object_identifier/der_decode_object_identifier.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/object_identifier/der_encode_object_identifier.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/object_identifier/der_length_object_identifier.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/octet/der_decode_octet_string.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/octet/der_encode_octet_string.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/octet/der_length_octet_string.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/printable_string/der_decode_printable_string.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/printable_string/der_encode_printable_string.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/printable_string/der_length_printable_string.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/sequence/der_decode_sequence_ex.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/sequence/der_decode_sequence_flexi.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/sequence/der_decode_sequence_multi.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/sequence/der_decode_subject_public_key_info.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/sequence/der_encode_sequence_ex.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/sequence/der_encode_sequence_multi.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/sequence/der_encode_subject_public_key_info.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/sequence/der_length_sequence.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/sequence/der_sequence_free.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/sequence/der_sequence_shrink.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/set/der_encode_set.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/set/der_encode_setof.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/short_integer/der_decode_short_integer.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/short_integer/der_encode_short_integer.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/short_integer/der_length_short_integer.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/teletex_string/der_decode_teletex_string.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/teletex_string/der_length_teletex_string.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/utctime/der_decode_utctime.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/utctime/der_encode_utctime.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/utctime/der_length_utctime.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/utf8/der_decode_utf8_string.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/utf8/der_encode_utf8_string.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/asn1/der/utf8/der_length_utf8_string.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/dh/dh.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/dh/dh_check_pubkey.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/dh/dh_export.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/dh/dh_export_key.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/dh/dh_free.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/dh/dh_generate_key.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/dh/dh_import.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/dh/dh_set.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/dh/dh_set_pg_dhparam.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/dh/dh_shared_secret.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/dsa/dsa_decrypt_key.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/dsa/dsa_encrypt_key.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/dsa/dsa_export.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/dsa/dsa_free.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/dsa/dsa_generate_key.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/dsa/dsa_generate_pqg.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/dsa/dsa_import.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/dsa/dsa_make_key.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/dsa/dsa_set.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/dsa/dsa_set_pqg_dsaparam.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/dsa/dsa_shared_secret.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/dsa/dsa_sign_hash.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/dsa/dsa_verify_hash.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/dsa/dsa_verify_key.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/ecc/ecc.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/ecc/ecc_ansi_x963_export.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/ecc/ecc_ansi_x963_import.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/ecc/ecc_decrypt_key.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/ecc/ecc_encrypt_key.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/ecc/ecc_export.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/ecc/ecc_free.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/ecc/ecc_get_size.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/ecc/ecc_import.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/ecc/ecc_make_key.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/ecc/ecc_shared_secret.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/ecc/ecc_sign_hash.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/ecc/ecc_sizes.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/ecc/ecc_test.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/ecc/ecc_verify_hash.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/ecc/ltc_ecc_is_valid_idx.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/ecc/ltc_ecc_map.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/ecc/ltc_ecc_mul2add.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/ecc/ltc_ecc_mulmod.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/ecc/ltc_ecc_mulmod_timing.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/ecc/ltc_ecc_points.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/ecc/ltc_ecc_projective_add_point.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/ecc/ltc_ecc_projective_dbl_point.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/katja/katja_decrypt_key.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/katja/katja_encrypt_key.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/katja/katja_export.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/katja/katja_exptmod.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/katja/katja_free.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/katja/katja_import.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/katja/katja_make_key.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/pkcs1/pkcs_1_i2osp.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/pkcs1/pkcs_1_mgf1.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/pkcs1/pkcs_1_oaep_decode.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/pkcs1/pkcs_1_oaep_encode.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/pkcs1/pkcs_1_os2ip.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/pkcs1/pkcs_1_pss_decode.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/pkcs1/pkcs_1_pss_encode.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/pkcs1/pkcs_1_v1_5_decode.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/pkcs1/pkcs_1_v1_5_encode.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/rsa/rsa_decrypt_key.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/rsa/rsa_encrypt_key.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/rsa/rsa_export.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/rsa/rsa_exptmod.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/rsa/rsa_free.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/rsa/rsa_get_size.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/rsa/rsa_import.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/rsa/rsa_import_pkcs8.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/rsa/rsa_import_x509.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/rsa/rsa_make_key.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/rsa/rsa_set.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/rsa/rsa_sign_hash.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/rsa/rsa_sign_saltlen_get.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/pk/rsa/rsa_verify_hash.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/prngs/chacha20.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/prngs/fortuna.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/prngs/rc4.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/prngs/rng_get_bytes.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/prngs/rng_make_prng.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/prngs/sober128.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/prngs/sprng.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/prngs/yarrow.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/stream/chacha/chacha_crypt.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/stream/chacha/chacha_done.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/stream/chacha/chacha_ivctr32.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/stream/chacha/chacha_ivctr64.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/stream/chacha/chacha_keystream.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/stream/chacha/chacha_setup.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/stream/chacha/chacha_test.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/stream/rc4/rc4_stream.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/stream/rc4/rc4_test.c"
#EXCLUDE "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/stream/sober128/sober128tab.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/stream/sober128/sober128_stream.c"
 "${CXBXR_ROOT_DIR}/import/libtomcrypt/src/stream/sober128/sober128_test.c"

)

source_group(TREE ${CXBXR_ROOT_DIR}/import/libtomcrypt/src/headers PREFIX header FILES ${HEADERS})

source_group(TREE ${CXBXR_ROOT_DIR}/import/libtomcrypt/src PREFIX source FILES ${SOURCES})

add_library(libtomcrypt ${HEADERS} ${SOURCES})

target_link_libraries(libtomcrypt
 PUBLIC libtommath

 ${WINS_LIB}
)
